--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,6 +2,7 @@ body {
     background-color: #b8c6db;
     background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
 }
+
 /* Typography */
 
 h1, h2, h3, h4, h5, h6 {
@@ -139,7 +140,14 @@ ol, li {
 
 /* Buttons */
 
-.btn-primary, .btn-info, .btn-success, .btn-warning {
+.btn-primary, 
+.btn-info, 
+.btn-success, 
+.btn-warning,
+.btn-selectionned_primary, 
+.btn-selectionned_warning,
+.btn-selectionned_info, 
+.btn-selectionned_success {
     color: white;
     font-weight: bold;
     font-family: 'Lato', sans-serif;
@@ -184,7 +192,28 @@ ol, li {
     background-color: #6C9C04;
 }
 
-.btn-outline-primary, .btn-outline-info, .btn-outline-success, .btn-outline-warning {
+/* Buttons - Hover */
+
+.btn-selectionned_primary {
+    background-color: #FC741C;
+}
+
+.btn-selectionned_warning {
+    background-color: #DE3F25;
+}
+
+.btn-selectionned_info {
+    background-color: #046C1C;
+}
+
+.btn-selectionned_success {
+    background-color: #6C9C04;
+}
+
+.btn-outline-primary, 
+.btn-outline-info, 
+.btn-outline-success, 
+.btn-outline-warning {
     font-weight: bold;
     font-family: 'Lato', sans-serif;
     font-size: 14px;
@@ -420,54 +449,55 @@ textarea, select {
     font-weight: bold;
 }
 
-
-/* Molécules */
-
-.card {
-    margin: 0 30px ;
-    width: 10em;
-    border: solid 1px var(--light);
-    border-radius: 20px;
-}
-.card-top {
-    border-radius: 20px 20px 0 0;
-    padding: 0px 30px 30px 30px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 8em;
-}
-.card-text {
-    padding: 1em 1em;
-}
-
 /* Agencement */
 
-.centered {
-    margin: auto;
-}
-
-.box-full-w {
+.flex-container {
     display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: baseline;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content:space-around;
+    align-items: flex-start;
+    align-content: stretch;
 }
 
-.col {
-    flex-direction: column;
-}
-.mb-2 {
-    margin-bottom: 2em;
-}
-.mb-3 {
-    margin-bottom: 3em;
-}
-.mb-4 {
-    margin-bottom: 4em;
-}
-
-.mb-5 {
-    margin-bottom: 5em;
+.flex-item {
+    order: 1;
+    flex-basis: auto;
+    border-color:black;
+    inline-size: auto;
+    border-radius: 5px;
+    width: 350px;
+    background-color: #fff;
+    margin-bottom: 25px;
+    cursor: pointer;
 }
 
+.picture {
+    width: 350px;
+    align-content: center;
+    margin-bottom: 10px;
+    overflow: hidden;
+}
+
+.flex-item:hover {
+    transform: scale(1.1);
+}
+
+.flex-item-zoom {
+    transition: 0.2s;
+}
+
+.description, 
+.home_title {
+    margin : 10px;
+}
+
+.description {
+    margin-bottom: 20px;
+}
+
+flex-item:hover,
+flex-item:active {
+    box-shadow: 12px 12px 12px 1px #E4E4DC;
+    color: #FC741C;
+}
