begin radio button

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -36,7 +36,7 @@ h6 {
     font-size: 18px;
 }
 
-p, p.small, p.lead, blockquote, figcaption, ol, ul, li, a {
+p, p.small, p.lead, blockquote, figcaption, ol, ul, li, a, .container {
     font-family: 'Lato', sans-serif;
     letter-spacing: 1px;
     word-spacing: 0.5px;
@@ -472,8 +472,6 @@ textarea, select {
     background-color: #E4E4DC;
 }
 
-
-
 /* Small Input */
 
 input[type=text_sm], select {
@@ -532,7 +530,6 @@ input[type=text_lg], select {
     padding-left: 30px;
     margin-bottom: 15px;
     cursor: pointer;
-    font-size: 22px;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -608,6 +605,73 @@ input[type=text_lg], select {
     transform: rotate(45deg);
 }
 
+
+/* Radio button */
+/* Customize the label (the container) */
+.container_radio {
+    display: block;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
+  
+  /* Hide the browser's default radio button */
+  .container_radio input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  /* Create a custom radio button */
+  .checkmark_radio {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    border-radius: 50%;
+  }
+  
+  /* On mouse-over, add a grey background color */
+  .container_radio:hover input ~ .checkmark_radio {
+    background-color: #ccc;
+  }
+  
+  /* When the radio button is checked, add a blue background */
+  .container_radio input:checked ~ .checkmark_radio {
+    background-color: #2196F3;
+  }
+  
+  /* Create the indicator (the dot/circle - hidden when not checked) */
+  .checkmark_radio:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the indicator (dot/circle) when checked */
+  .container_radio input:checked ~ .checkmark_radio:after {
+    display: block;
+  }
+  
+  /* Style the indicator (dot/circle) */
+  .container_radio .checkmark_radio:after {
+    top: 9px;
+    left: 9px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: white;
+  }
 /* Agencement */
 
 .flex-container {
